Fixing image overlap

--- a/css/accesscustom.css
+++ b/css/accesscustom.css
@@ -21,7 +21,7 @@ p.credit{
 }
 
 .reveal section img {
-	max-height: 75%;
+	max-height: 600px;
 }
 
 
